--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- END nav -->
 
     <section class="home-slider owl-carousel">
-		<div class="slider-item" style="background-image: url('images/coffeeHP.jpg');">
+		<div class="slider-item" style="background-image: url('images/CoffeeHP.jpg');">
 
      
       	<div class="overlay"></div>
