--- a/menu.html
+++ b/menu.html
@@ -167,7 +167,7 @@
           <div class="desc pl-3">
             <div class="d-flex text align-items-center">
               <h3><span>Iced Americano (Iced Dark Elixir)</span></h3>
-              <span class="price">₹140</span>
+              <span class="price">₹170</span>
             </div>
             <div class="d-block">
               <p>Chilled espresso with water</p>
@@ -323,6 +323,122 @@
             </div>
             <div class="d-block">
               <p>Chilled lemony black tea</p>
+            </div>
+          </div>
+        </div>
+
+		   <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span>Blueberry Ice Tea</span></h3>
+              <span class="price">₹150</span>
+            </div>
+            <div class="d-block">
+              <p>A cooling blueberry iced tea offering a perfect balance of bold tea and berry sweetness.</p>
+            </div>
+          </div>
+        </div>
+
+		   <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span>Raspberry Ice Tea</span></h3>
+              <span class="price">₹160</span>
+            </div>
+            <div class="d-block">
+              <p>A revitalizing raspberry iced tea offering a sweet, tangy, and cooling experience.</p>
+            </div>
+          </div>
+        </div>
+
+		  <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span>Peach Ice Tea</span></h3>
+              <span class="price">₹150</span>
+            </div>
+            <div class="d-block">
+              <p>Light and refreshing peach iced tea crafted for a perfectly fruity sip.</p>
+            </div>
+          </div>
+        </div>
+
+		    <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span>Kaccha Aam Ice Tea</span></h3>
+              <span class="price">₹140</span>
+            </div>
+            <div class="d-block">
+              <p>A lively iced tea with the sharp, mouthwatering punch of kaccha aam</p>
+            </div>
+          </div>
+        </div>
+		     <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span>Voodoo Mojito</span></h3>
+              <span class="price">₹140</span>
+            </div>
+            <div class="d-block">
+              <p>/p>
+            </div>
+          </div>
+        </div>
+
+		    <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span>Coco Almond Shake </span></h3>
+              <span class="price">₹230</span>
+            </div>
+            <div class="d-block">
+              <p>/p>
+            </div>
+          </div>
+        </div>
+
+		  		    <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span> Hazel Banana Shake </span></h3>
+              <span class="price">₹240</span>
+            </div>
+            <div class="d-block">
+              <p>/p>
+            </div>
+          </div>
+        </div>
+
+		  		    <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span> Tiramisu Almond Shake </span></h3>
+              <span class="price">₹250</span>
+            </div>
+            <div class="d-block">
+              <p>/p>
+            </div>
+          </div>
+        </div>
+
+		  	    <div class="pricing-entry d-flex ftco-animate">
+          <div class="img" style="background-image: url(images/ice-1.jpg);"></div>
+          <div class="desc pl-3">
+            <div class="d-flex text align-items-center">
+              <h3><span> Blueberry Charma Shake </span></h3>
+              <span class="price">₹260</span>
+            </div>
+            <div class="d-block">
+              <p>/p>
             </div>
           </div>
         </div>
@@ -486,7 +602,7 @@
           <div class="desc pl-3">
             <div class="d-flex text align-items-center">
               <h3><span>Butter Croissant</span></h3>
-              <span class="price">₹150</span>
+              <span class="price">₹170</span>
             </div>
             <div class="d-block">
               <p>Flaky, buttery croissant baked golden for a crisp, melt-in-your-mouth bite.</p>
@@ -620,19 +736,7 @@
           </div>
         </div>
 
-         <div class="pricing-entry d-flex ftco-animate">
-          <div class="img" style="background-image: url(images/cookie-1.jpg);"></div>
-          <div class="desc pl-3">
-            <div class="d-flex text align-items-center">
-              <h3><span>Avocado Toast (4pc)</span></h3>
-              <span class="price">₹240</span>
-            </div>
-            <div class="d-block">
-              <p>Toasted bread topped with creamy avocado spread, seasoned lightly.</p>
-            </div>
-          </div>
-        </div>
-
+    
          <div class="pricing-entry d-flex ftco-animate">
           <div class="img" style="background-image: url(images/cookie-1.jpg);"></div>
           <div class="desc pl-3">
@@ -663,7 +767,7 @@
           <div class="img" style="background-image: url(images/cookie-1.jpg);"></div>
           <div class="desc pl-3">
             <div class="d-flex text align-items-center">
-              <h3><span>Veg Mystic burger</span></h3>
+              <h3><span>Veg Mystic Burger</span></h3>
               <span class="price">₹200</span>
             </div>
             <div class="d-block">
@@ -676,7 +780,7 @@
           <div class="img" style="background-image: url(images/cookie-1.jpg);"></div>
           <div class="desc pl-3">
             <div class="d-flex text align-items-center">
-              <h3><span>Veg croissant burger</span></h3>
+              <h3><span>Veg Croissant Burger</span></h3>
               <span class="price">₹200</span>
             </div>
             <div class="d-block">
